fix spacing

--- a/public/index.css
+++ b/public/index.css
@@ -2,10 +2,9 @@ html {
   font-family: Arial, sans-serif;
   font-size: 1rem;
   line-height: 1.25;
-  transform: translate(-50%, -50%);
+  transform: translateY(-50%);
   position: absolute;
   top: 25%;
-  left: 50%;
 }
 
 #file-name {
